# PrivaGate

./: .env.example  .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  detector_request.yml  feature_request.yml  research_question.yml
.github/workflows/: ci.yml
config/: policy.sample.json
crates/privagate-core/: Cargo.toml
crates/privagate-core/src/: lib.rs  (+5 more)
crates/privagate-gateway/: Cargo.toml
crates/proofgate-core/: Cargo.toml
crates/proofgate-core/src/: digest.rs  dp.rs  lib.rs  policy.rs  transform.rs
crates/proofgate-gateway/: Cargo.toml
crates/proofgate-gateway/src/: main.rs  model_adapter.rs
data/complex-text-task-results/: complex_en_medical_claim_appeal_text_001.md  complex_zh_supply_chain_finance_risk_001.md
deploy/kubernetes/: privagate-gateway.yaml  proofgate-gateway.yaml
deploy/otel-collector/: config.yaml
docs/: API.en.md  API.md  ARCHITECTURE.md  COMMANDS.md  CONTRIBUTOR_TASKS.md  DEPLOYMENT.md  DOCUMENTATION.md  EVALUATION_PLAN.md  EXTERNAL_API_SIMULATION_TEST.md  LOCAL_DEPENDENCY_CACHE.md  MODEL_ADAPTERS.md  OBSERVABILITY.md  OPEN_SOURCE_RELEASE.md  RFC_PROCESS.md  ROADMAP.md  RUNTIME_ENVIRONMENT.md  SECURITY_OPERATIONS.md  TECH_STACK.md  TEST_PLAN.md  THREAT_MODEL.md  VERIFICATION_MODEL.md  WHITEPAPER.md
docs/rfcs/: 0000-template.md  README.md
examples/: multitable-project-request.json  project-request.json  route-plan-execute-request.json  route-plan-request.json  shard-plan-execute-request.json  shard-plan-promote-request.json  shard-plan-request.json
scripts/: cargo.ps1  cargo.sh  dev-env.ps1  dev-env.sh  prepublish-check.ps1  prepublish-check.sh  run-complex-en-task.ps1  run-complex-en-task.sh  run-complex-zh-task.ps1  run-complex-zh-task.sh  run-external-api-simulation.ps1  run-external-api-simulation.sh
tests/complex_text_task/: run_complex_en_medical_claim_task.py  run_complex_zh_supply_chain_task.py
(+4 files in other folders)
