[package]
name = "proofgate-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
hmac.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
