[package]
name = "proofgate-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
proofgate-core = { path = "../proofgate-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
